# rules_go_test

./: WORKSPACE
example/: BUILD.bazel  main.go
versions/: BUILD.bazel  main.go
