load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "example",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
    ],
)

go_binary(
    name = "example",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library2",
    srcs = ["main.go"],
    importpath = "example",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_binary(
    name = "example2",
    embed = [":go_default_library2"],
    visibility = ["//visibility:public"],
)
