load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "versions",
    visibility = ["//visibility:private"],
    deps = [
        "//versions/vendor/bar.com/y:go_default_library",
        "//versions/vendor/baz.com/z:go_default_library",
    ],
)

go_binary(
    name = "versions",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
